feat: working metadata manipulation via API requests from front end
